vX.Y.Z

- Made some changes to Docker scripts to help customize PostgreSQL version used

v0.43.0

- Adopt Artistic License 2.0
- Fix run-workload script to work on single tier configuration, bugs
  introduced v0.42 
- Driver now logs w_id and d_id per transaction
- Fix segmentation fault when limiting the total number of driver threads
- Increase buffer size for the database hostname in the client to 64 bytes
- Add -y flag to run-workload script to specify database is a service
- Fix driver's rampup calculation when limiting total emulated terminals
- Update Dockerfile to use Rocky Linux instead of CentOS
- Fix driver execution when limited to a single terminal

v0.42

- Add Docker files and scripts to test building and evaluate a PostgreSQL
  database.
- Update for CMake policy CMP0037.
- Replace obsolete bzero with memset
- Replace obsolete gethostbyname and gethostbyaddr with getaddrinfo
- Use PCG Fast pseudo random number generator
- Update data generator to use UTF-8
- Refactor datagen parallelism
- Update PostgreSQL pl/pgsql stored functions
- Support basic 3-tier execution with run-workload script
- Refactored altered mode driver execution with finer grained controls

v0.41

- Renamed the 'scripts' directory to 'bin'.
- Added SQLite support.
- Renamed all the script with 'dbt2-' prefixes to facilitate a better
  'make install' in the future.
- Use cmake over autotools.
- Added Drizzle support.
- Removed use of Test::Parser and Test::Presenter perl modules and require use
  of dbttools instead.
- Use R for post processing.
- Run scripts capable of running multiple instances of clients and drivers.
- Direct load data for Postgres.

v0.40

- Various fixes with all the scripts.
- Ability to run in a two-tier environment.
- Added scripts to run a test against a pull from PostgreSQL's CVS repository.
- Fixed 90th percentile and steady state metric calculations.
- Added support for pgpool.
- Fixed memory violation with datagen.

v0.39
