@@ -1,0 +1,65 @@
+#!/bin/sh
+#
+# This file is released under the terms of the Artistic License.
+# Please see the file LICENSE, included in this package, for details.
+#
+# Copyright (C) 2005-2006 Open Source Development Labs, Inc.
+#               2005-2022 Mark Wong
+#
+
+usage()
+{
+	echo "Usage:"
+	echo "    dbt2-cockroach-build-db [options]"
+	echo "    dbt2-cockroach-build-db -h"
+	echo "Options:"
+	echo "    -l <port>"
+	echo "        PostgreSQL port"
+	echo "    -r"
+	echo "        Drop existing database before building a new database"
+	echo "    -w <scale factor>"
+	echo "        Number of warehouses to build. Default 1."
+}
+
+WAREHOUSES=1
+REBUILD_DB=0
+while getopts "hl:rw:" OPT; do
+	case ${OPT} in
+	h)
+		usage
+		exit 0
+		;;
+	l)
+		PORT=${OPTARG}
+		;;
+	r)
+		REBUILD_DB=1
+		;;
+	w)
+		WAREHOUSES=${OPTARG}
+		;;
+	esac
+done
+
+if [ ! "x${PORT}" = "x" ]; then
+	PORTARG="-l ${PORT}"
+fi
+
+if [ $REBUILD_DB -eq 1 ]; then
+	dbt2-pgsql-drop-db ${PORTARG}
+fi
+
+dbt2-pgsql-create-db ${PORTARG} || exit 1
+dbt2-cockroach-create-tables ${PORTARG} || exit 1
+
+SEED=`dbt2-rand 1 18446744073709551615 0`
+
+# FIXME: Make datagen take argument instead of setting environment variables
+# for psql.
+export PGPORT="${PORT}"
+export PGDATABASE="${DBT2DBNAME}"
+
+dbt2-pgsql-load-db $PORTARG -s $SEED -w $WAREHOUSES || exit 1
+dbt2-cockroach-create-indexes ${PORTARG} || exit 1
+
+exit 0
