@@ -1,6 +1,7 @@
 vX.Y.Z
 
 - Made some changes to Docker scripts to help customize PostgreSQL version used
+- Add scripts to build a database on CockroachDB
 
 v0.43.0
 
